Add one more metric

--- a/rag.ipynb
+++ b/rag.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,6 +39,7 @@
     "\n",
     "## DeepEval\n",
     "from deepeval.integrations.llama_index import (\n",
+    "    DeepEvalAnswerRelevancyEvaluator,\n",
     "    DeepEvalFaithfulnessEvaluator,\n",
     "    DeepEvalContextualRelevancyEvaluator,\n",
     ")"
@@ -1715,7 +1716,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -1732,13 +1733,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b45f0ac6a987478cabce49f0217a2900",
+       "model_id": "72bb2758804e419a846433e1e46c8e4d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1778,7 +1779,7 @@
      "text": [
       "True\n",
       "0.5\n",
-      "The score is 0.50 because the context provided fails to specify the key details requested in the input, particularly \"the extent of coverage,\" \"the maximum amount covered,\" and \"any additional services included in the benefit,\" which are critical to understanding the insurance coverage for accidents caused by uninsured drivers.\n",
+      "The score is 0.50 because the context lacks specific details about the coverage extent, maximum amount, and additional services for accidents with uninsured drivers, which are essential to the input query.\n",
       "Allianz provides coverage for loss or damage to your vehicle in the event of an accident caused by the driver of an uninsured vehicle up to a maximum amount of $5,000 for any one incident. This coverage includes the cost of protection, removal, and towing related to the accident.\n",
       "['Allianz > Legal liability > Other beneﬁts we will pay > (This benefit is applicable to Third Party Insurance and Third Party Fire & Theft Insurance only)\\nWe will cover your vehicle for loss or damage arising from an accident caused by the driver of an uninsured vehicle up to a maximum amount of $5,000 for any one incident including the cost of protection, removal and towing.', 'Allianz > Comprehensive insurance > Accidental loss of or damage to your vehicle\\nWe will cover you for accidental loss of (including theft) or any other type of accidental damage that happens to your vehicle during the period of insurance, subject to the other terms of this section and the policy (including those relating to the limits and excess).']\n"
      ]
@@ -1800,13 +1801,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "292f481578174bc2be503552582d08c3",
+       "model_id": "411b2ec3ec0c4160a74621da98e79997",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1846,7 +1847,7 @@
      "text": [
       "True\n",
       "0.5\n",
-      "The score is 0.50 because the context provided fails to specify the key details requested in the input, particularly \"the extent of coverage,\" \"the maximum amount covered,\" and \"any additional services included in the benefit,\" which are critical to understanding the insurance coverage for accidents caused by uninsured drivers.\n",
+      "The score is 0.50 because the context lacks specific details about the coverage extent, maximum amount, and additional services for accidents with uninsured drivers, which are essential to the input query.\n",
       "Allianz provides coverage for loss or damage to your vehicle in the event of an accident caused by the driver of an uninsured vehicle up to a maximum amount of $5,000 for any one incident. This coverage includes the cost of protection, removal, and towing related to the accident.\n",
       "['Allianz > Legal liability > Other beneﬁts we will pay > (This benefit is applicable to Third Party Insurance and Third Party Fire & Theft Insurance only)\\nWe will cover your vehicle for loss or damage arising from an accident caused by the driver of an uninsured vehicle up to a maximum amount of $5,000 for any one incident including the cost of protection, removal and towing.', 'Allianz > Comprehensive insurance > Other beneﬁts we will pay\\nUnless we have stated differently under one of the other benefits listed below, the benefit will only apply where we have accepted your claim for accidental loss of or accidental damage to your vehicle (called a covered accident) under the policy and any payment we may make under this section will be paid in addition to any amount payable for the loss of or damage to your vehicle.']\n"
      ]
@@ -1884,30 +1885,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING:opentelemetry.exporter.otlp.proto.http.trace_exporter:Transient error  encountered while exporting span batch, retrying in 1s.\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ab56c9aac7ef4470953aac472499f8a5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "What condition must be met for a vehicle owner to receive a lifetime guarantee on the workmanship of repairs authorized and paid for by NRMA?\n"
+      "True\n",
+      "0.75\n",
+      "The score is 0.75 because the actual output incorrectly suggests that Allianz coverage is contingent upon an accident being caused by an uninsured driver, whereas the retrieval context clarifies that Allianz offers Comprehensive insurance for various types of accidental loss or damage, not solely incidents involving uninsured drivers.\n",
+      "Allianz provides coverage for loss or damage to your vehicle in the event of an accident caused by the driver of an uninsured vehicle up to a maximum amount of $5,000 for any one incident. This coverage includes the cost of protection, removal, and towing related to the accident.\n",
+      "['Allianz > Legal liability > Other beneﬁts we will pay > (This benefit is applicable to Third Party Insurance and Third Party Fire & Theft Insurance only)\\nWe will cover your vehicle for loss or damage arising from an accident caused by the driver of an uninsured vehicle up to a maximum amount of $5,000 for any one incident including the cost of protection, removal and towing.', 'Allianz > Comprehensive insurance > Accidental loss of or damage to your vehicle\\nWe will cover you for accidental loss of (including theft) or any other type of accidental damage that happens to your vehicle during the period of insurance, subject to the other terms of this section and the policy (including those relating to the limits and excess).']\n"
      ]
     }
    ],
    "source": [
-    "print(rag_dataset[0].query)"
+    "query = rag_dataset[1].query\n",
+    "response = openai_query_engine.query(query)\n",
+    "evaluation_result = deepeval_faithfulness_evaluator.evaluate_response(\n",
+    "    query=query, response=response\n",
+    ")\n",
+    "\n",
+    "print(evaluation_result.passing)\n",
+    "print(evaluation_result.score)\n",
+    "print(evaluation_result.feedback)\n",
+    "print(evaluation_result.response)\n",
+    "print([node.text for node in response.source_nodes])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "5b065ce8df4b4b37b5289b06ffac03a5",
+       "model_id": "1a29063a7f06467d8e23d6359e477fa6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1948,14 +2007,14 @@
       "True\n",
       "1.0\n",
       "The score is 1.00 because there are no contradictions between the actual output and the retrieval context, indicating perfect faithfulness.\n",
-      "The condition that must be met for a vehicle owner to receive a lifetime guarantee on the workmanship of repairs authorized and paid for by NRMA is that the owner must remain the owner of the vehicle.\n",
-      "['NRMA > Inspections\\nLifetime guarantee on authorised repairs If we authorise and pay for a repairer to fix your vehicle, then we provide a lifetime guarantee for the workmanship of those repairs as long as you are the owner of your vehicle.', 'NRMA > Inspections\\nWe will choose to settle your claim under our lifetime guarantee through any of these ways: we can arrange for the original repairer or an NRMA Partner Repairer to repair your vehicle we can choose to pay you the reasonable cost to repair your vehicle as determined by us.\\nWe determine what the reasonable cost is to repair your vehicle by looking at a range of factors, including quotes from the original repairer or NRMA Partner Repairers, our nominated repair methods for the type of damage to your vehicle and reports from our assessors, or we can choose to pay you an amount that is equal to the market value of a vehicle at the time of your lifetime guarantee claim.\\nThe market value will be determined based on vehicles of the same make, model, engine size, equipment level and paint type, without the defect which is the subject of your lifetime guarantee claim.\\nIf we do this, we will keep your vehicle.\\nOur choice will have regard to the circumstances of your claim and consider any preference you may have.']\n"
+      "Allianz provides coverage for loss or damage to your vehicle arising from an accident caused by the driver of an uninsured vehicle up to a maximum amount of $5,000 for any one incident. This coverage includes the cost of protection, removal, and towing.\n",
+      "['Allianz > Legal liability > Other beneﬁts we will pay > (This benefit is applicable to Third Party Insurance and Third Party Fire & Theft Insurance only)\\nWe will cover your vehicle for loss or damage arising from an accident caused by the driver of an uninsured vehicle up to a maximum amount of $5,000 for any one incident including the cost of protection, removal and towing.', 'Allianz > Comprehensive insurance > Other beneﬁts we will pay\\nUnless we have stated differently under one of the other benefits listed below, the benefit will only apply where we have accepted your claim for accidental loss of or accidental damage to your vehicle (called a covered accident) under the policy and any payment we may make under this section will be paid in addition to any amount payable for the loss of or damage to your vehicle.']\n"
      ]
     }
    ],
    "source": [
-    "query = rag_dataset[0].query\n",
-    "response = openai_query_engine.query(query)\n",
+    "query = rag_dataset[1].query\n",
+    "response = gemini_query_engine.query(query)\n",
     "evaluation_result = deepeval_faithfulness_evaluator.evaluate_response(\n",
     "    query=query, response=response\n",
     ")\n",
@@ -1968,14 +2027,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Evaluate generated response's answer relevancy using DeepEval"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 68,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "deepeval_answer_relevancy_evaluator = DeepEvalAnswerRelevancyEvaluator(model=model_str)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "74f0c7f26eba4d749e557985f9ed9f2e",
+       "model_id": "8bedee4251934a41aeb672095295dbc8",
        "version_major": 2,
        "version_minor": 0
       },
@@ -2015,16 +2090,84 @@
      "text": [
       "True\n",
       "1.0\n",
-      "The score is 1.00 because there are no contradictions present between the actual output and the retrieval context, indicating a perfect alignment.\n",
-      "The vehicle owner must remain the owner of the vehicle for the lifetime of the guarantee.\n",
-      "['NRMA > Inspections\\nLifetime guarantee on authorised repairs If we authorise and pay for a repairer to fix your vehicle, then we provide a lifetime guarantee for the workmanship of those repairs as long as you are the owner of your vehicle.', 'NRMA > Inspections\\nHowever, you can’t claim under our lifetime guarantee if: you sold your vehicle – that is, you are no longer the owner of your vehicle • you (or your agent) authorised repairs to your vehicle without our prior written consent you arrange repairs after we cash settle your claim – that is, we do not authorise repairs there is loss or damage to or failure of any electrical or mechanical part or component, or there is deterioration or wear and tear caused:\\n– over time – by using your vehicle – by exposing your vehicle to the elements – for example, faded or damaged paint from exposure to sun, dirt and/or corrosive materials, or – by your failure to maintain your vehicle in good order and repair.']\n"
+      "The score is 1.00 because the response precisely addressed the input, providing a detailed explanation of the coverage extent, maximum amount, and additional services included in Allianz's policy for damage caused by an uninsured driver, without including any irrelevant statements. Great job on maintaining focus and relevancy!\n",
+      "Allianz provides coverage for loss or damage to your vehicle in the event of an accident caused by the driver of an uninsured vehicle up to a maximum amount of $5,000 for any one incident. This coverage includes the cost of protection, removal, and towing related to the accident.\n",
+      "['Allianz > Legal liability > Other beneﬁts we will pay > (This benefit is applicable to Third Party Insurance and Third Party Fire & Theft Insurance only)\\nWe will cover your vehicle for loss or damage arising from an accident caused by the driver of an uninsured vehicle up to a maximum amount of $5,000 for any one incident including the cost of protection, removal and towing.', 'Allianz > Comprehensive insurance > Accidental loss of or damage to your vehicle\\nWe will cover you for accidental loss of (including theft) or any other type of accidental damage that happens to your vehicle during the period of insurance, subject to the other terms of this section and the policy (including those relating to the limits and excess).']\n"
      ]
     }
    ],
    "source": [
-    "query = rag_dataset[0].query\n",
+    "query = rag_dataset[1].query\n",
+    "response = openai_query_engine.query(query)\n",
+    "evaluation_result = deepeval_answer_relevancy_evaluator.evaluate_response(\n",
+    "    query=query, response=response\n",
+    ")\n",
+    "\n",
+    "print(evaluation_result.passing)\n",
+    "print(evaluation_result.score)\n",
+    "print(evaluation_result.feedback)\n",
+    "print(evaluation_result.response)\n",
+    "print([node.text for node in response.source_nodes])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "66d0b5ec6cbc49bca8c11e39aaea7e8d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Output()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\"></pre>\n"
+      ],
+      "text/plain": []
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">\n",
+       "</pre>\n"
+      ],
+      "text/plain": [
+       "\n"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "1.0\n",
+      "The score is 1.00 because the output is completely relevant to the input provided, addressing the specific details of coverage, maximum amount, and any additional services included by Allianz for loss or damage caused by an uninsured driver, with no irrelevant statements made. Great job on maintaining focus and relevancy!\n",
+      "Allianz provides coverage for loss or damage to your vehicle arising from an accident caused by the driver of an uninsured vehicle up to a maximum amount of $5,000 for any one incident. This coverage includes the cost of protection, removal, and towing.\n",
+      "['Allianz > Legal liability > Other beneﬁts we will pay > (This benefit is applicable to Third Party Insurance and Third Party Fire & Theft Insurance only)\\nWe will cover your vehicle for loss or damage arising from an accident caused by the driver of an uninsured vehicle up to a maximum amount of $5,000 for any one incident including the cost of protection, removal and towing.', 'Allianz > Comprehensive insurance > Other beneﬁts we will pay\\nUnless we have stated differently under one of the other benefits listed below, the benefit will only apply where we have accepted your claim for accidental loss of or accidental damage to your vehicle (called a covered accident) under the policy and any payment we may make under this section will be paid in addition to any amount payable for the loss of or damage to your vehicle.']\n"
+     ]
+    }
+   ],
+   "source": [
+    "query = rag_dataset[1].query\n",
     "response = gemini_query_engine.query(query)\n",
-    "evaluation_result = deepeval_faithfulness_evaluator.evaluate_response(\n",
+    "evaluation_result = deepeval_answer_relevancy_evaluator.evaluate_response(\n",
     "    query=query, response=response\n",
     ")\n",
     "\n",
